--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "husky": {
@@ -36,6 +35,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.19.0",
+    "class-validator": "^0.12.2",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "pg": "^8.5.1",
