--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "apollo-server-express": "^2.19.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
