--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
-    "build": "NODE_ENV=production tsc -p tsconfig.json",
+    "start": "NODE_ENV=production nodemon --exec ts-node src/index.ts",
+    "dev": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
+    "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "husky": {
