--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
-DB_HOST = abcde.cravwavodaxd.ap-northeast-1.rds.amazonaws.com
-DB_USERNAME = 
-DB_PASSWORD = 
-DB_NAME = 
+DEV_DB_HOST = 
+DEV_DB_USERNAME = 
+DEV_DB_PASSWORD =
+DEV_DB_NAME =
+
+PROD_DB_HOST = 
+PROD_DB_USERNAME = 
+PROD_DB_PASSWORD = 
+PROD_DB_NAME = 
+
+BASE_URL =
+
+JWT_SECRET = 
