--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "apollo-server-express": "^2.19.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
+    "dayjs": "^1.10.1",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
